Bug 9948 - [BUG] 2.6.25-rc1-git1 softlockup while bootup on powerpc
Summary: [BUG] 2.6.25-rc1-git1 softlockup while bootup on powerpc
Status: CLOSED CODE_FIX
Alias: None
Product: IO/Storage
Classification: Unclassified
Component: Block Layer (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jens Axboe
URL:
Keywords:
Depends on:
Blocks: 9832
  Show dependency tree
 
Reported: 2008-02-13 05:00 UTC by Rafael J. Wysocki
Modified: 2008-02-19 05:20 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.25-rc1-git1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
Print some debug info on process exit (2.08 KB, patch)
2008-02-18 10:04 UTC, Jens Axboe
Details | Diff
Add parallel hlist for tree browsing (5.43 KB, patch)
2008-02-19 01:08 UTC, Jens Axboe
Details | Diff

Description Rafael J. Wysocki 2008-02-13 05:00:40 UTC
Subject         : [BUG] 2.6.25-rc1-git1 softlockup while bootup on powerpc
Submitter       : Kamalesh Babulal <kamalesh@linux.vnet.ibm.com>
Date            : 2008-02-12 08:09
References      : http://lkml.org/lkml/2008/2/12/44
Handled-By      : Ingo Molnar <mingo@elte.hu>

This entry is being used for tracking a regression from 2.6.24.  Please don't
close it until the problem is fixed in the mainline or the report is rejected.
Comment 1 Rafael J. Wysocki 2008-02-17 12:10:14 UTC
References : http://lkml.org/lkml/2008/2/16/10
Comment 2 Rafael J. Wysocki 2008-02-17 12:11:04 UTC
Handled-By : Jens Axboe <jens.axboe@oracle.com>
Comment 3 Kamalesh Babulal 2008-02-18 03:41:05 UTC
The softlockup is seen from 2.6.25-rc1-git{1,3} and is visible in the 2.6.24-rc2 kernel, While booting up with the 2.6.25-rc1-git{1,3} and 2.6.25-rc2 kernel(s) on the powerbox.
Comment 4 Jens Axboe 2008-02-18 09:53:34 UTC
I'm assuming you meant 'is visible in the 2.6.25-rc2 kernel', correct? I'll supply a debug patch for you to try, so we can gather some more info.
Comment 5 Jens Axboe 2008-02-18 10:04:01 UTC
Created attachment 14887 [details]
Print some debug info on process exit

Please try with this applied - perhaps the printks will make the problem go away, we'll see.
Comment 6 Jens Axboe 2008-02-19 01:08:06 UTC
Created attachment 14890 [details]
Add parallel hlist for tree browsing

This should fix the issue seen.
Comment 7 Kamalesh Babulal 2008-02-19 05:20:39 UTC
(In reply to comment #6)
> Created an attachment (id=14890) [details]
> Add parallel hlist for tree browsing
> 
> This should fix the issue seen.
> 

This patch fixes the bootup panic issue.

Note You need to log in before you can comment on or make changes to this bug.